@@ -1,0 +1,3 @@
+.branch-name{
+  font-weight: 600;
+}
