@@ -1,0 +1,3 @@
+.tag-name{
+  font-weight: 600;
+}
